test/fail/ac/pointcutunknown.app
//does not exist

application test

define page root() {
}

access control rules

  rule pointcut somepointcut(a:Int)
  {
    true
  }
  
